Comments for circuitsvis

--- a/CNN_interp/training.ipynb
+++ b/CNN_interp/training.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,16 +102,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<torch.utils.hooks.RemovableHandle at 0x7f3f9b4b5fd0>"
+       "<torch.utils.hooks.RemovableHandle at 0x7f3f9a53fee0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +280,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved feature maps for layer2_block2 to ../output/layer2_block2_feature_maps.png\n"
+      "Saved feature maps for layer2_block2 to output/layer2_block2_feature_maps.png\n"
      ]
     },
     {
@@ -297,7 +297,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved feature maps for layer3_block2 to ../output/layer3_block2_feature_maps.png\n"
+      "Saved feature maps for layer3_block2 to output/layer3_block2_feature_maps.png\n"
      ]
     },
     {
@@ -314,7 +314,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved feature maps for layer4_block2 to ../output/layer4_block2_feature_maps.png\n"
+      "Saved feature maps for layer4_block2 to output/layer4_block2_feature_maps.png\n"
      ]
     },
     {
@@ -331,7 +331,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved saliency map to ../output/saliency_map.png\n"
+      "Saved saliency map to output/saliency_map.png\n"
      ]
     },
     {
@@ -348,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved Grad-CAM to ../output/grad_cam.png\n"
+      "Saved Grad-CAM to output/grad_cam.png\n"
      ]
     }
    ],
